--- a/tickets-frontend/package.json
+++ b/tickets-frontend/package.json
@@ -13,6 +13,7 @@
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
